<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="12dip" >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/follow_me"
	        />
	    <CheckBox
	        android:id="@+id/follow_me_check"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:text="@string/enable"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        />
	    
	    <include layout="@layout/divider_horizontal"/>
	    
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/call_main"
	        />
	   	<Spinner
	   	    android:id="@+id/fm_main_spinner"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="9dip"
	        android:entries="@array/duration"
	   	    />
	   	
	   	<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/call_list"
	        />
	    <Spinner
	   	    android:id="@+id/fm_list_spinner"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="9dip"
	        android:entries="@array/duration"
	   	    />
	   	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/number_list"
	        />
	     <EditText
	        android:id="@+id/fm_numbers"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="false"
	        
	        />
	    
	 	<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/confirmation"
	        />
	    <CheckBox
	        android:id="@+id/fm_confirmation_check"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:text="@string/confirmation_exp"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        />
	</LinearLayout>
</ScrollView>