<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="12dip" >
	    <TextView 
	        android:id="@+id/call_waiting_label"
	        android:layout_height="wrap_content" 
	        android:layout_width="wrap_content"
	        android:text="@string/call_waiting"
	        android:visibility="gone"
	        android:textSize="13sp"
	        />
	    <CheckBox
	        android:id="@+id/call_waiting_check"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:text="@string/block_incoming_busy"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        android:visibility="gone"
	        />
	    
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/dnd"
	        android:textSize="13sp"
	        />
	    <CheckBox
	        android:id="@+id/block_incoming_check"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:text="@string/block_incoming"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        />
	    
	    <include layout="@layout/divider_horizontal"/>
	    
	    <CheckBox 
	        android:id="@+id/forward_always_check"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/forwarding_always"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        android:textSize="13sp"
	        />
	    <EditText
	        android:id="@+id/forwarding_input_always"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="true"
	        android:inputType="phone"
	        android:maxLines="1"
	        />
	    
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:gravity="center"
	        android:textSize="10sp"
	        android:layout_margin="5dip"
	        android:text="@string/forwarding_hint"
	        />
	    
	    <CheckBox  
	        android:id="@+id/forward_na_check"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/forwarding_not_available"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        />
	     <EditText
	        android:id="@+id/forwarding_input_na"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="true"
	        android:inputType="phone"
	        android:maxLines="1"
	        />
	     
	    <CheckBox 
	        android:id="@+id/forward_busy_check"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/forwarding_busy"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        />
	     <EditText
	        android:id="@+id/forwarding_input_busy"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="true"
	        android:inputType="phone"
	        android:maxLines="1"
	        />
	    
	
	</LinearLayout>
</ScrollView>