<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="12dip" >
	      <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:textSize="14sp"
	        android:gravity="center"
	        android:layout_marginTop="7dip"
	        android:layout_marginBottom="7dip"
	        android:text="@string/user_hint"
	        />  
	    <TextView 
	        android:id="@+id/user_fname_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_fname"
	        />
	    <EditText
	        android:id="@+id/user_fname_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:inputType="text"
	        android:singleLine="true"
	        android:maxLines="1"
	       
	        />

	    <TextView  
	        android:id="@+id/user_lname_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_lname"
	        />
	     <EditText
	        android:id="@+id/user_lname_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:inputType="text"
	        android:singleLine="true"
	        android:maxLines="1"
	       
	        />
	     
	    <TextView 
	        android:id="@+id/user_email_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_email"
	        />
	     <EditText
	        android:id="@+id/user_email_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/email_hint"
	        android:singleLine="true"
	        android:inputType="textEmailAddress"
	        android:maxLines="1"
	       
	        />
	     
	     <TextView
	        android:id="@+id/user_n_mobile_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_mobile"
	        />
	     <EditText
	        android:id="@+id/user_n_mobile_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="true"
	        android:inputType="phone"
	        android:maxLines="1"
	       
	        />
	     
	    <TextView 
	        android:id="@+id/user_n_home_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_home"
	        />
	     <EditText
	        android:id="@+id/user_n_home_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="@string/number_hint"
	        android:singleLine="true"
	        android:inputType="phone"
	        android:maxLines="1"
	       
	        />
	     
	     <TextView 
	        android:id="@+id/ringtime_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/ring_time"
	        />
	     <Spinner
	   	    android:id="@+id/user_ringtime_spinner"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="9dip"
	        android:entries="@array/duration_ringtime"
	   	    />
	     <TextView 
	        android:id="@+id/cf_ringtime_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/ring_time_cf"
	        />
	     <Spinner
	   	    android:id="@+id/user_cf_ringtime_spinner"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="9dip"
	        android:entries="@array/duration_cf_ringtime"
	   	    />
	    <TextView 
	        android:id="@+id/user_pass_title"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/user_pass"
	        />
	     <EditText
	        android:id="@+id/user_password_input"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dip"
	        android:hint="*****"
	        android:singleLine="true"
	        android:inputType="textPassword"
	        android:maxLines="1"
	       
	        />
	    
	
	</LinearLayout>
</ScrollView>