<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:padding="12dip">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/folder_title_prompt"/>
	    <EditText 
	        android:id="@+id/folder_title_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/folder_title_hint"
	        android:inputType="textCapWords"
	        android:layout_marginBottom="15dip"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/folder_type_prompt"/>
		<Spinner 
	        android:id="@+id/folder_type_input"
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
	        android:layout_marginBottom="15dip"
	        android:entries="@array/folder_types"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/folder_parent_prompt"/>
		<Spinner
	        android:id="@+id/folder_parent_input"
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
	        android:layout_marginBottom="15dip"
		    />
	</LinearLayout>

</ScrollView>