<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="12dip" >
	    
	    <TextView 
	        android:id="@+id/status_own_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:text="@string/status_own_prompt"
	        android:visibility="gone"/>
	    
	    <EditText 
	        android:id="@+id/status_own_input"
			android:layout_below="@+id/status_own_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="textCapSentences"
	        android:singleLine="true"
	        android:hint="@string/status_own_hint"
	        android:visibility="gone"/>
	    
	    
	    <CheckBox 
	        android:id="@+id/status_use_end_time_check"
			android:layout_below="@+id/status_own_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        android:text="@string/status_end_time"
	        android:layout_marginBottom="10dip"/>
	    
	    <TextView  
	        android:id="@+id/status_end_time_title"
	        android:layout_below="@+id/status_use_end_time_check"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="0dip" 
	        android:text="@string/status_use_end_time"
	        android:visibility="gone"
			/>
	    
	    <TimePicker 
	        android:id="@+id/status_end_time_picker"
			android:layout_below="@+id/status_end_time_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dip" 
	        android:visibility="gone"/>
	    
	    
	    <CheckBox 
	        android:id="@+id/status_dnd_check"
			android:layout_below="@+id/status_end_time_picker"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
	        android:text="@string/status_activate_dnd"/>
	
	</RelativeLayout>
</ScrollView>