<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
		android:background="#15000000"
        android:weightSum="3">
	    <Button 
	        android:id="@+id/header_button_extensions"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:tag="0"
	        android:textSize="12sp"
	        android:padding="10dip"
	        android:gravity="center"
	        android:background="@drawable/list_selector_holo_light"
	        android:text="@string/contacts_select_remote"/>  
	    
	    <Button 
	        android:id="@+id/header_button_local"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:tag="1"
	        android:textSize="12sp"
	        android:padding="10dip"
	        android:gravity="center"
	        android:background="@drawable/list_selector_holo_light"
	        android:text="@string/contacts_select_local"/>

	    <Button 
	        android:id="@+id/header_button_company"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:tag="2"
	        android:textSize="12sp"
	        android:padding="10dip"
	        android:gravity="center"
	        android:background="@drawable/list_selector_holo_light"
	        android:text="@string/contacts_select_contacts"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:padding="10dip"
        android:gravity="center_horizontal|top"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <EditText 
        android:id="@+id/filter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:inputType="textCapWords"
        android:padding="10dip"
        android:textSize="17sp"
        android:textColor="#AA000000"
        android:hint="@string/search"/>
 

</LinearLayout>